# pycliques2

./: .gitignore  LICENSE  Makefile  README.md  check_setup.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst
src/pycliques2/: __init__.py  cliques.py  coaffinations.py  dominated.py  surfaces.py
tests/: test_cliques.py  test_coaffinations.py  test_dominated.py  test_surfaces.py  test_version.py
